--- a/weather/templates/weather/home.html
+++ b/weather/templates/weather/home.html
@@ -12,7 +12,9 @@
       <div class="col align-self-start">
         <h3>{{data.name}}, {{data.sys.country}}</h3>
       </div>
-      
+      <div class="col align-self-end text-end">
+        <h3>{{data.sys.emoji}}</h3>
+      </div>
     </div>
   </div>
   
@@ -20,7 +22,7 @@
   <div class="container">
     <div class = "row">  
       <div class="col align-self-center text-center">
-        <img src={{data.icon}} alt="" width="20%" height="20%">
+        <img src={{data.weather.0.icon}} alt="" width="20%" height="20%">
       </div>
     </div>
     <div class="row">
@@ -82,7 +84,7 @@
         
       </div>
       <div class="col">
-        m
+        km
       </div>
     </div>
     <div class="row">
