wind direction and profile redirects

--- a/weather/templates/weather/home.html
+++ b/weather/templates/weather/home.html
@@ -106,13 +106,13 @@
         wind direction
       </div>
       <div class="col" id="wind_deg">
-        {{data.wind.deg}}
+        {{data.wind.dir}}
       </div>
       <div class="col">
         
       </div>
       <div class="col">
-        <sup>o</sup>
+        
       </div>
     </div>
     
