--- a/weather/templates/weather/base.html
+++ b/weather/templates/weather/base.html
@@ -33,7 +33,7 @@
               <a class="nav-link active" aria-current="page" href="{%url 'weather:home'%}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{%url 'weather:profile'%}">Change Location</a>
+              <a class="nav-link active" aria-current="page" href="{%url 'weather:profile'%}">Change/Add Location</a>
             </li>
           </ul>
           <ul class="navbar-nav mb-2 mb-lg-0">
